# wasm-proto-benchmarking

./: .gitignore
proto/: main.proto
wasm-js/: index.js  package-lock.json  package.json
wasm-proto/: Cargo.toml
wasm-proto/src/: lib.rs
wasm-rs/: Cargo.toml  build.rs
wasm-rs/src/: lib.rs
web-server/: index.html  package-lock.json  package.json  vite.config.js
web-server/src/: main.js  proto.js  style.css
